Fix: Align section titles

--- a/style.scss
+++ b/style.scss
@@ -174,7 +174,7 @@ body {
             background: #CFE5FF;
             align-items: end;
     
-            .texts {
+            .land-h1, .land-h2 {
                 text-align: left;
             }
         }
@@ -227,10 +227,11 @@ body {
 }
 
 .sign {
+    margin-top: 140px;
     background: $basic;
     display: flex;
     justify-content: center;
-    padding-top: 230px;
+    align-items: center;
 
     &-container {
         width: 640px;
@@ -249,7 +250,7 @@ body {
             &__input {
                 box-sizing: border-box;
                 width: 100%;
-                height: 72px;
+                height: 56px;
                 padding: 16px 24px;
                 border: none;
                 border-radius: 12px;
